# fastapi-tdd

./: Dockerfile  docker-compose.yml
app/: main.py
project/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
project/app/: config.py  db.py  main.py
project/db/: Dockerfile
project/tests/: conftest.py  test_ping.py
