[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Ayan Akkassov <akkassov.ayan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.65.3"
uvicorn = "0.14.0"
tortoise-orm = "0.17.4"
asyncpg = "0.23.0"
aerich = "0.5.3"
pytest = "^6.2.5"
requests = "2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
